5533.	[func]		Add "stale-refresh-time" option, a time window that
			starts after a failed lookup, during which stale rrset
			will be served directly from cache before a new
			attempt to refresh it is made. [GL #2066]

5530.	[bug]		DNSTAP did not capture responses to forwarded
			UPDATE requests. [GL #2252]

5527.	[bug]		There was a NULL pointer dereference if the creation
			of the fetch to determine if a negative trust anchor
			was still valid failed. [GL #2244]

5525.	[bug]		Change 5503 inadvertently broke cross-compilation by
			replacing a call to AC_LINK_IFELSE() with a call to
			AC_RUN_IFELSE() in configure.ac.  This has been fixed,
			making cross-compilation possible again. [GL #2237]

5523.	[bug]		The initial lookup of a zone transitioning to/from
			the signed state could fail if the DNSKEY RRset was
			not found.  Subsequent lookups would succeed.
			[GL #2236]

5522.	[bug]		Fix a race/NULL dereference in TCPDNS. [GL #2227]

5520.	[bug]		Fixed a number of shutdown races, reference counting
			errors, and spurious log messages that could occur
			in the network manager. [GL #2221]

5518.	[bug]		Fix stub zone not transferring nameserver addresses
			from masters configured with 'minimal-responses yes'.
			[GL #1736]

5517.	[bug]		Handle 'UV_EOF' differently and don't contribute it to
			the RECVFAIL statistic count. [GL #2208]

	--- 9.16.8 released ---

5516.	[func]		The default EDNS buffer size has been changed from 4096
			to 1232 bytes. [GL #2183]

5515.	[func]		Add 'rndc dnssec -rollover' command to trigger a manual
			rollover for a specific key. [GL #1749]

5514.	[bug]		Fix KASP expected key size for Ed25519 and Ed448.
			[GL #2171]

5513.	[doc]		The ARM section describing the "rrset-order" statement
			was rewritten to make it unambiguous and up-to-date with
			the source code. [GL #2139]

5512.	[bug]		"rrset-order" rules using "order none" were causing
			named to crash despite named-checkconf treating them as
			valid. [GL #2139]
