@@ -1,3 +1,6 @@
+5534.	[bug]		The synthesised CNAME from a DNAME was incorrectly
+			followed when the QTYPE was CNAME or ANY. [GL #2280]
+
 5533.	[func]		Add "stale-refresh-time" option, a time window that
 			starts after a failed lookup, during which stale rrset
 			will be served directly from cache before a new
